# pam_mujoco

./: .flake8  .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  README.md  package.xml  pyproject.toml  readme.md  setup.py
debian/: control
demos/: #contact_examples.py#  .gitignore  basic.py  contact_examples.py  contact_immobile_racket.py  contact_moving_racket.py  contact_table.py  detect_contact.py  generate_models.py  hit_point.py  hysr_one_ball.py  mirror_ball.py  mirror_robot.py  play_trajectories.py  play_trajectory.py  pressures.py  pressures_swing.py
doc/: 01.installation.md  02.run_the_demo.md  03.code_overview.md
include/pam_mujoco/: add_controllers.hpp  add_controllers.hxx  burst_controller.hpp  burster_controller.hpp  constants.hpp  contact_ball.hpp  contact_information.hpp  contact_items.hpp  contacts.hpp  controllers.hpp  enum.hpp  extra_balls_extended_state.hpp  extra_balls_extended_state.hxx  force_compute.hpp  force_computes.hpp  joint_state.hpp  listener.hpp  logger.hpp  mirror_balls.hpp  mirror_balls.hxx  mirror_external_robot.hpp  mirror_external_robot.hxx  mirror_free_joint.hpp  mirror_free_joint.hxx  mirror_free_joints.hpp  mirror_free_joints.hxx  mirror_robot.hpp  mirror_robot.hxx  mj_state_tools.hpp  mtest.hpp  mujoco_base.cpp  mujoco_base.hpp  mujoco_config.hpp  mujoco_config.hxx  mujoco_state.hpp  muscles.hpp  pam_robot.hpp  pid.hpp  pressure_controller.hpp  pressure_controller.hxx  (+14 more)
include/pam_mujoco/internal/: contact_logic.hpp  contact_states.hpp  is_in_contact.hpp  recompute_state_after_contact.hpp
models/: actuation.xml  actuation_1.xml  pamy.xml  robot_1.xml  robot_2.xml  template.xml  two_robot_setup.xml  where_are_the_files.txt
models/igus/: RL-50_Rotaryeinheit_abkupfer.stl  igus_base.stl  igus_base_move.stl  igus_move.stl  schlaeger_anbindung-Tischtennisschlaeger_Butterfly-1.stl  schlaeger_anbindung-igus_anbindung_extra-1.stl
models/robot_templates/: actuator_template.xml  body_template.xml  body_template_no_muscles.xml  tendon_template.xml
models/robot_templates/pamy1/: body_template_no_muscles.xml
models/robot_templates/pamy2/: body_template.xml  body_template_no_muscles.xml
models/tmp/: #test.xml#
mypy_stubs/scipy/spatial/: transform.pyi
python/pam_mujoco/: __init__.py  hysr_one_ball.py  mirroring.py  models.py  mujoco_handle.py  mujoco_ids.py  mujoco_item.py  mujoco_items.py  mujoco_robot.py  mujoco_table.py  paths.py  robot_type.py  segment_ids.py  start_mujoco.py  xml_templates.py
python/pam_mujoco/gym/: .#rewards.py  hysr_one_ball.py  mirroring.py  start_mujoco.py
src/: add_controller.cpp  add_controllers.cpp  burst_controller.cpp  burster_controller.cpp  contact_ball.cpp  contact_information.cpp  contact_logic.cpp  contact_states.cpp  contact_states2.cpp  contact_states3.cpp  contact_states4.cpp  contacts.cpp  controllers.cpp  force_computes.cpp  is_in_contact.cpp  listener.cpp  logger.cpp  mirror_robot.cpp  mj_data_file_bin2json.cpp  mj_state_tools.cpp  mtest.cpp  mujoco_base.cpp  mujoco_config.cpp  mujoco_simulate_example.cpp  mujoco_state.cpp  pam_mujoco.cpp  pam_mujoco_load.cpp  pid.cpp  read_robot_state.cpp  recompute_state_after_contact.cpp  robot_fk_extended_state.cpp  run_management.cpp  run_mujoco.cpp  share_robot_state.cpp  sim_mirror.cpp  sim_trimmed.cpp  test_run.cpp
srcpy/: wrappers.cpp
tests/: test_mj_state_tools.cpp  test_ring_buffer.cpp  test_simulation.py  test_xml_templates.py  unit_tests.cpp  unittests.cpp
